--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ more-itertools==10.2.0
 moviepy==1.0.3
 mpmath==1.3.0
 multidict==6.0.5
-networkx==3.3
+networkx
 numba==0.59.1
 numpy==1.26.4
 openai==1.31.1
