--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,8 @@ networkx
 numba==0.59.1
 numpy==1.26.4
 openai==1.31.1
-openai-whisper==20231117
-pillow==10.3.0
+# openai-whisper==20231117 # Removed due to triton conflict
+pillow==9.5.0 # Downgrade Pillow for moviepy compatibility
 proglog==0.1.10
 pydantic==2.7.3
 pydantic_core==2.18.4
