--- a/requirements.txt
+++ b/requirements.txt
@@ -49,3 +49,5 @@ urllib3==2.2.1
 whisper-timestamped==1.15.4
 yarl==1.9.4
 groq==0.11.0
+ultralytics # For YOLOv8
+opencv-python # For video processing
