feat: Add Kayla personality with RSS image and Pexels fallback
- Add personality dropdown (Manual, Kayla) to Gradio UI.
- Implement Kayla logic to fetch/score conservative news via RSS.
- Integrate Kayla topic selection into the video generation flow.
- Add Pexels fallback search for missing video keywords.
- Attempt to fetch and use primary image from RSS article for Kayla's first segment.
- Update .gitignore for generated files and dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
+# Logs
 .logs/
+
+# Python virtual environment
 venv/
+/venv/
+
+# Python cache files
 __pycache__/
+*.py[cod]
+
+# OS-specific files
 .DS_Store
+
+# Environment variables
+.env*
+
+# Generated media files
+*.mp4
+*.wav
+*.mp3
+
+# Model files
+*.pt
+
+# Specific untracked files (adjust if needed)
+utility/render/render_engine_aeneas.py
+utility/topic_processor.py
