--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ mpmath==1.3.0
 multidict==6.0.5
 networkx
 numba==0.59.1
-numpy==1.26.4
+numpy>=1.26.4 # Re-add numpy for bounce effect
 openai==1.31.1
 # openai-whisper==20231117 # Removed due to triton conflict
 pillow==9.5.0 # Downgrade Pillow for moviepy compatibility
@@ -49,5 +49,7 @@ urllib3==2.2.1
 whisper-timestamped==1.15.4
 yarl==1.9.4
 groq==0.11.0
-ultralytics # For YOLOv8
-opencv-python # For video processing
+# emoji # Removed - Not used in whisper workflow
+# aeneas # Removed - Reverted to whisper workflow
+# ultralytics # Removed - No longer using YOLO
+# opencv-python # Removed - No longer using YOLO
